# eth-header-indexer

./: .env.example  .env.test  .gitignore  Cargo.toml  Dockerfile.anvil  Dockerfile.fix  Dockerfile.indexer  Dockerfile.migrate  Dockerfile.update  README.md  docker-compose.local.yml  docker-compose.mainnet.yml  docker-compose.sepolia.yml  docker-compose.test.yml  docker-compose.yml
.cargo/: config.toml
.github/workflows/: ci.yml  deploy.mainnet.yml  deploy.sepolia.yml  deploy.yml
migrations/: 20241126104440_init.down.sql  20241126104440_init.up.sql  20250107071623_index_metadata.down.sql  20250107071623_index_metadata.up.sql  20250108182341_index_metadata_new_field.down.sql  20250108182341_index_metadata_new_field.up.sql  20250113103011_remove_foreign_key_constraints.down.sql  20250113103011_remove_foreign_key_constraints.up.sql
scripts/: run-coverage.sh  run-migrations.sh  run-test.sh  run.sh
src/: error_tests.rs  errors.rs  lib.rs  main.rs  mocks.rs  property_tests.rs  test_utils.rs  types.rs  utils.rs
src/commands/: mod.rs  tests.rs
src/db/: db_test.rs  mod.rs  tests.rs
src/endpoints/: mod.rs
src/fossil_mmr/: mod.rs
src/indexer/: batch_service.rs  indexer_tests.rs  lib.rs  main.rs  mod.rs  quick_service.rs  test_utils.rs
src/repositories/: README.md  block_header.rs  index_metadata.rs  mod.rs
src/router/: handlers.rs  mod.rs
src/rpc/: mod.rs  tests.rs
src/types/: mod.rs  type_utils.rs
tests/: test_indexer.rs  test_utils.rs
tests/fixtures/: eth_getBlockByNumber_21598014.json  eth_getBlockByNumber_21598015.json
tests/fixtures/indexer/: eth_getBlockByNumber_sepolia_0.json  eth_getBlockByNumber_sepolia_1.json  eth_getBlockByNumber_sepolia_2.json  eth_getBlockByNumber_sepolia_3.json  eth_getBlockByNumber_sepolia_4.json  eth_getBlockByNumber_sepolia_5.json
