[package]
name = "fossil_headers_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
axum = { version = "0.7.5", features = ["macros"] }
clap = { version = "4.5.7", features = ["derive"] }
ctrlc = "3.4.4"
dotenvy = "0.15.7"
futures = "0.3.30"
futures-util = "0.3.30"
reqwest = { version = "0.12.4", features = [ "json" ] }
serde = "1.0.203"
sqlx = { version = "0.8.2", features = [ "runtime-tokio", "postgres", "chrono", "tls-rustls", "macros" ] }
tokio = { version = "1.38.0", features = [ "rt", "rt-multi-thread", "macros" ] }
tracing = "0.1.40"
eyre = "0.6.10"
once_cell = "1.1.0"
tracing-subscriber = { version = "0.3.17", features = [ "env-filter" ] }
serde_json = "1.0.105"